plotted the distribution of numerical features with a histogram

--- a/cree.ipynb
+++ b/cree.ipynb
@@ -1270,7 +1270,7 @@
     }
    ],
    "source": [
-    "#plotting the distribution of the numerical features using a histogram\n",
+    "#plotting the distribution of the numerical features with a histogram\n",
     "data.hist(figsize=(8, 10), bins=50, xlabelsize=8, ylabelsize=5);\n"
    ]
   },
