predicted the tests results

--- a/cree.ipynb
+++ b/cree.ipynb
@@ -1525,6 +1525,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#predicting the Test set results\n",
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
