calculated residue errors

--- a/cree.ipynb
+++ b/cree.ipynb
@@ -1535,6 +1535,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 40835.10590871]\n",
+      " [123079.39940819]\n",
+      " [ 65134.55626083]\n",
+      " [ 63265.36777221]\n",
+      " [115602.64545369]\n",
+      " [108125.8914992 ]\n",
+      " [116537.23969801]\n",
+      " [ 64199.96201652]\n",
+      " [ 76349.68719258]\n",
+      " [100649.1375447 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#displaying y_pred - Predicted salary\n",
+    "print(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Salary\n",
+      "2    37731.0\n",
+      "28  122391.0\n",
+      "13   57081.0\n",
+      "10   63218.0\n",
+      "26  116969.0\n",
+      "24  109431.0\n",
+      "27  112635.0\n",
+      "11   55794.0\n",
+      "17   83088.0\n",
+      "22  101302.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#displaying y_test - Actual salary\n",
+    "print(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Salary\n",
+      "2   3104.105909\n",
+      "28   688.399408\n",
+      "13  8053.556261\n",
+      "10    47.367772\n",
+      "26 -1366.354546\n",
+      "24 -1305.108501\n",
+      "27  3902.239698\n",
+      "11  8405.962017\n",
+      "17 -6738.312807\n",
+      "22  -652.862455\n"
+     ]
+    }
+   ],
+   "source": [
+    "#calculating residue errors\n",
+    "residue = y_pred - y_test\n",
+    "print(residue)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
