--- a/cree.ipynb
+++ b/cree.ipynb
@@ -18,6 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error"
    ]
@@ -1749,6 +1750,14 @@
    ],
    "source": [
     "y_pred.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluating the Model"
    ]
   },
   {
