--- a/cree.ipynb
+++ b/cree.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "4                2.2  39891.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "(30, 2)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "28               10.3  122391.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "29               10.5  121872.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "29               10.5  121872.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
        "29               10.5  121872.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,14 +1068,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h5/x30m0dg90wlfdhdlz31t7jwr0000gn/T/ipykernel_32048/3709958571.py:1: UserWarning: \n",
+      "/var/folders/h5/x30m0dg90wlfdhdlz31t7jwr0000gn/T/ipykernel_78567/3709958571.py:1: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -1094,7 +1094,7 @@
        "<Axes: xlabel='YearsofExperience'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
        "<Axes: xlabel='count', ylabel='YearsofExperience'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
        "<Axes: xlabel='YearsofExperience', ylabel='Salary'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1207,14 +1207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h5/x30m0dg90wlfdhdlz31t7jwr0000gn/T/ipykernel_32048/2009633111.py:1: UserWarning: \n",
+      "/var/folders/h5/x30m0dg90wlfdhdlz31t7jwr0000gn/T/ipykernel_78567/2009633111.py:1: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -1233,7 +1233,7 @@
        "<Axes: xlabel='Salary', ylabel='Density'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -1275,17 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = ['YearsofExperience']\n",
-    "y = ['Salary']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -1362,16 +1352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x16d942aa0>"
+       "<matplotlib.collections.PathCollection at 0x28e85ab90>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1401,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,19 +1514,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-6 {color: black;background-color: white;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "LinearRegression()"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,7 +1540,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 94.0%\n",
+      "Testing accuracy: 97.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#displaying training and testing accuracy\n",
+    "print(\"Training accuracy: {}%\".format(round(model.score(X_train, y_train), 2)*100))\n",
+    "print(\"Testing accuracy: {}%\".format(round(model.score(X_test, y_test), 2)*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -1718,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1756,7 @@
        "(10, 1)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1777,7 @@
        "(10, 1)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1786,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
